--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,35 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  font-size: 16px;
+}
+h1, h2, h3, h4, h5, h6{
+  font-weight: normal;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+button,
+input,
+select,
+textarea {
+  background-color: transparent;
+  border: 0;
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+}
+a,
+button {
+  cursor: pointer;
+}
+ul,
+ol {
+  padding-left: 0;
+  list-style: none;
 }
