--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,19 +1,37 @@
 header{
-  padding: 0 80px;
-  margin: 0 auto;
-  width: 1410px;
-  border-bottom: 2px solid #333;
+  position: fixed;
+  top: 0;
+  padding: 10px 0;
+  width: 100%;
+  backdrop-filter: blur(5px);
+  border-bottom: 1px solid #ccc;
+  background: linear-gradient(90deg, #ffffff00 0%, #ffffff50 10%, #ffffff50 90%, #ffffff00 100%);
   .container{
+    padding: 0 80px;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 1410px;
     display: flex;
     .logo{
       width: 20%;
     }
     ul{
       width: 80%;
-      height: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      li{
+        a{
+          display: block;
+          font-size: 1.2rem;
+          font-weight: bold;
+          transition: .3s ease-in;
+          &:hover{
+           color: red;
+          }
+        }
+      }
     }
   }
 }
