--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,55 +1,71 @@
 .main{
-  .subject{
-    position: relative;
-    padding-left: 30px;
-    font-size: 1.5rem;
-    &::before{
-      content: '*';
-      position: absolute;
-      top: 0;
-      left: 20px;
-      color: cornflowerblue;
-    }
-  }
-  .title{
-    margin-top: 50px;
-    text-align: center;
-    font-size: 4rem;
-  }
+  
   .container{
-    margin: 100px auto 0;
+    margin: 50px auto 0;
+    padding: 0 30px;
     width: 100%;
-    max-width: 1410px;
-    .profile-wrap{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 50px auto 0;
-      max-width: 400px;
-      .thumb{
-        width: 400px;
-        height: 450px;
-        overflow: hidden;
-        img{
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+    max-width: 1280px;
+    .subject{
+      position: relative;
+      display: inline-block;
+      padding-left: 30px;
+      font-size: 1.2rem;
+      &::before{
+        content: '*';
+        position: absolute;
+        top: 16px;
+        left: 27px;
+        width: 100%;
+        height: 10px;
+        color: cornflowerblue;
+        background-color: #ffc40057;
+      }
+    }
+    .title{
+      margin-top: 35px;
+      text-align: center;
+      font-size: 4rem;
+    }
+    .tag-title{
+      position: relative;
+      margin: 120px auto 0;
+      padding-left: 68px;
+      width: auto;
+      font-size: 6rem;
+      font-weight: bold;
+      span{
+        position: relative;
+        &::before{
+          content: '#';
+          position: absolute;
+          top: 0;
+          left: -68px;
         }
       }
-      .contents{
-        width: 100%;
-        margin-top: 30px;
-        .utils{
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
+    }
+    .text{
+      margin-top: 20px;
+      font-size: 1rem;
+      line-height: 1.7;
+      em{
+        position: relative;
+        &:before{
+          content: '';
+          position: absolute;
+          top: 7px;
+          left: 10px;
+          width: 92%;
+          height: 14px;
+          background-color: #ff3b0047;
         }
       }
     }
   }
-  .m-size-title{
-    margin-top: 50px;
-    text-align: center;
-    font-size: 2rem;
-  }
+ 
+}
+
+.ir-hidden{
+  display: inline-block;
+  font-size: 0;
+  text-indent: -1000px;
 }
