--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,18 +1,27 @@
 header{
   position: fixed;
   top: 0;
-  padding: 10px 0;
+  z-index: 1000;
   width: 100%;
   backdrop-filter: blur(5px);
   border-bottom: 1px solid #ccc;
   background: linear-gradient(90deg, #ffffff00 0%, #ffffff50 10%, #ffffff50 90%, #ffffff00 100%);
+ .process-bar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1005;
+    width: 100%;
+    height: 5px;
+    background-color: #8d96ff;
+  }
   .container{
+   
+    display: flex;
     padding: 0 80px;
     margin: 0 auto;
     width: 100%;
-    height: 100%;
-    max-width: 1410px;
-    display: flex;
+    max-width: 1280px;
     .logo{
       width: 20%;
     }
@@ -24,7 +33,7 @@ header{
       li{
         a{
           display: block;
-          font-size: 1.2rem;
+          font-size: 1rem;
           font-weight: bold;
           transition: .3s ease-in;
           &:hover{
