--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -33,8 +33,9 @@ header{
       li{
         a{
           display: block;
-          font-size: 1rem;
+          font-size: 1.3rem;
           font-weight: bold;
+          font-family: 'Caveat', cursive;
           transition: .3s ease-in;
           &:hover{
            color: red;
