--- a/src/components/ListCards/ListCards.scss
+++ b/src/components/ListCards/ListCards.scss
@@ -20,9 +20,9 @@
     }
     .list-title{
       margin-top: 8px;
-      font-size: 1.1rem;
-      font-weight: bold;
+      font-size: 1.5rem;
       color: #333;
+      font-family: 'Abril Fatface', cursive;
     }
     &:hover{
       span{
