--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -9,7 +9,11 @@
       position: relative;
       display: inline-block;
       padding-left: 30px;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
+      // letter-spacing: -.5px;
+      font-family: 'Noto Sans KR', sans-serif;
+
+
       &::before{
         content: '*';
         position: absolute;
@@ -22,19 +26,23 @@
       }
     }
     .title{
-      margin-top: 35px;
+      margin-top: 100px;
       text-align: center;
       font-size: 4rem;
+      letter-spacing: 5px;
+      font-family: 'Caveat', cursive;
     }
     .tag-title{
       position: relative;
-      margin: 120px auto 0;
+      margin: 200px auto 0;
       padding-left: 68px;
       width: auto;
       font-size: 6rem;
-      font-weight: bold;
+      // font-family: 'El Messiri', sans-serif;
+      font-family: 'Abril Fatface', cursive;
       span{
         position: relative;
+        
         &::before{
           content: '#';
           position: absolute;
@@ -44,20 +52,35 @@
       }
     }
     .text{
-      margin-top: 20px;
+      margin-top: 35px;
       font-size: 1rem;
       line-height: 1.7;
       em{
+        display: inline-block;
+        margin-right: 8px;
+        font-weight: bold;
+        font-size: 1.5rem;
         position: relative;
+        font-family: 'Nanum Brush Script', cursive;
         &:before{
           content: '';
           position: absolute;
-          top: 7px;
-          left: 10px;
+          top: 17px;
+          left: 12px;
           width: 92%;
           height: 14px;
           background-color: #ff3b0047;
         }
+      }
+    }
+
+    .company-logo{
+      margin-top: 200px;
+      ul{
+        overflow-x: auto;
+        width: 100%;
+        display: flex;
+        background-color: rgb(223, 163, 163);
       }
     }
   }
