--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,30 +1,7 @@
 .main{
-  
   .container{
-    margin: 50px auto 0;
-    padding: 0 30px;
-    width: 100%;
+    margin: 0 auto;
     max-width: 1280px;
-    .subject{
-      position: relative;
-      display: inline-block;
-      padding-left: 30px;
-      font-size: 1.4rem;
-      // letter-spacing: -.5px;
-      font-family: 'Noto Sans KR', sans-serif;
-
-
-      &::before{
-        content: '*';
-        position: absolute;
-        top: 16px;
-        left: 27px;
-        width: 100%;
-        height: 10px;
-        color: cornflowerblue;
-        background-color: #ffc40057;
-      }
-    }
     .title{
       margin-top: 100px;
       text-align: center;
@@ -87,8 +64,3 @@
  
 }
 
-.ir-hidden{
-  display: inline-block;
-  font-size: 0;
-  text-indent: -1000px;
-}
