--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -18,7 +18,7 @@ header{
   }
   .container{
     display: flex;
-    padding: 0 25px;
+    padding: 10px 25px;
     margin: 0 auto;
     width: 100%;
     max-width: 1280px;
@@ -34,6 +34,7 @@ header{
           font-size: 1.3rem;
           font-weight: bold;
           font-family: 'Caveat', cursive;
+          letter-spacing: 1px;
           transition: .3s ease-in;
           &:hover{
            color: red;
