--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -5,7 +5,7 @@
   margin: 50px auto 0;
   padding: 20px 20px 30px 20px;
   max-width: 350px;
-  background-color: #fff;
+  background-color: #ffffff30;
   border: 1px solid #ddd;
   border-radius: 10px;
   box-sizing: border-box;
