--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -54,14 +54,26 @@
     .companyLogo{
       margin-top: 200px;
       ul{
-        overflow-x: auto;
+        overflow-x: scroll;
         width: 100%;
         display: flex;
-        background-color: #dfa3a3;
+        -ms-overflow-style: initial; // scroll 숨기기
+        &::-webkit-scrollbar {
+          display: block;
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #efd7d7;
+          display: block;
+          border-radius: 5px;
+        }
+        &::-webkit-scrollbar-track {
+          background-color: rgb(190, 143, 143);
+        }
       }
     }
     .tabs{
-      margin-top: 50px;
+      width: 70%;
+      margin: 50px auto 0;
       .tabMenu{
         display: flex;
         li{
@@ -74,8 +86,44 @@
         }
       }
       .tabContents{
-        border-top: 2px solid #333;
-        border-bottom: 2px solid #333;
+        > ul{
+          margin-top: 10px;
+          border-top: 2px solid #666;
+          border-bottom: 2px solid #666;
+          > li{
+            padding: 15px 0;
+            border-bottom: 1px solid #ddd;
+            .skillBox{
+              .graph{
+                margin: 0 auto;
+                width: 70%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+              }
+              .skillType{
+                margin-right: 15px;
+                width: 70px;
+                font-size: .7rem;
+                letter-spacing: -.4px;
+                text-align: right;
+              }
+              .line{
+                width: 50%;
+                height: 4px;
+                background-color: #dfa3a3;
+              }
+              .score{
+                margin-left: 15px;
+                font-size: .7rem;
+                letter-spacing: -.4px;
+                em{
+                  font-size: .6rem;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
