--- a/src/components/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs.module.scss
@@ -2,17 +2,27 @@
   position: relative;
   display: inline-block;
   padding-left: 30px;
-  font-size: 1.4rem;
-  // letter-spacing: -.5px;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1.8rem;
+  font-family: 'Caveat', cursive;
+  letter-spacing: .5px;
+  // font-family: 'Abril Fatface', cursive;
   &::before{
-    content: '*';
+    content: '';
     position: absolute;
-    top: 16px;
-    left: 27px;
-    width: 100%;
-    height: 10px;
-    color: cornflowerblue;
-    background-color: #ffc40057;
+    top: -70px;
+    left: 0px;
+    width: 130px;
+    height: 130px;
+    border: 3px solid #82a75e50;
+    transform: rotate(5deg);
+  }
+  &:after{
+    content: '';
+      position: absolute;
+      right: -30px;
+      bottom: -60px;
+      width: 90px;
+      height: 90px;
+      background-color: #f1b7b766;
   }
 }
