--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,8 +17,23 @@
         // font-family: 'Nanum Brush Script', cursive;
         color: #bc9b8f;
         a{
+          position: relative;
           margin-left: 10px;
           display: block;
+          &:before {
+              content: '';
+              position: absolute;
+              bottom: 0;
+              width: 0%;
+              height: 1px;
+              background-color: #bc9b8f;
+              transition: .2s ease-in;
+            }
+          &:hover{
+            &:before {
+                width: 100%;
+              }
+          }
         }
       }
       .copy{
