--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -6,9 +6,11 @@
   padding: 20px 20px 30px 20px;
   max-width: 350px;
   background-color: #ffffff30;
-  border: 1px solid #ddd;
+  // border: 1px solid #ddd;
   border-radius: 10px;
   box-sizing: border-box;
+  box-shadow: 2px 2px 15px 0px #77777750;
+  animation: ballon 10s ease-in-out infinite ;
   .thumb{
     width: 98%;
     height: 350px;
@@ -102,5 +104,23 @@
         background: #d6d6d6;
       }
     }
+  }
+}
+
+@keyframes ballon {
+  0% {
+    transform: translateY(0);
+  }
+  25%{
+    transform: translateY(25px);
+  }
+  50%{
+    transform: translateY(0px);
+  }
+  75%{
+    transform: translateY(25px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
