--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,4 +1,5 @@
 .contact{
+  padding: 130px 0;
   width: 100%;
   height: 100%;
   .container{
@@ -38,9 +39,10 @@
               display: block;
               margin-top: 10px;
               width: 20%;
-              padding: 8px;
+              padding: 10px 0;
               text-align: center;
-              background-color: aqua;
+              color: #fff;
+              background-color: #c7a6a6;
             }
           }
         }
