button 컴포넌트 제작 후, contact 페이지에 적용

--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -35,14 +35,8 @@
             width: 100%;
             display: flex;
             justify-content: flex-end;
-            .btnSend{
-              display: block;
-              margin-top: 10px;
-              width: 20%;
-              padding: 10px 0;
-              text-align: center;
-              color: #fff;
-              background-color: #c7a6a6;
+            button{
+              margin-left: 5px;
             }
           }
         }
