--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -1,4 +1,5 @@
 .profile{
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,10 +7,10 @@
   padding: 20px 20px 30px 20px;
   max-width: 350px;
   background-color: #ffffff30;
-  // border: 1px solid #ddd;
+  border: 1px solid #f3f3f3;
   border-radius: 10px;
   box-sizing: border-box;
-  box-shadow: 2px 2px 15px 0px #77777750;
+  box-shadow: 0 40px 40px -20px #8b6b6b40;
   animation: ballon 10s ease-in-out infinite ;
   .thumb{
     width: 98%;
