--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -3,5 +3,126 @@
   .container{
     margin: 0 auto;
     max-width: 1280px;
+    .projectWrap{
+      margin-top: 100px;
+      .cardWrap {
+        position: relative;
+        margin: 0 auto;
+        border-radius: 10px;
+        color: #303336;
+        background-color: #fff;
+        box-shadow: 0 40px 40px -20px #8b6b6b40;
+    
+        .cardCont {
+          position: relative;
+          display: flex;
+          width: 100%;
+          height: 100%;
+          padding: 50px;
+    
+          .contentLeft {
+            position: relative;
+            width: 300px;
+            height: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            background-color: #f6f6f6;
+    
+            img {
+              width: inherit;
+              height: inherit;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+    
+          .contentRight {
+            position: relative;
+            width: calc(100% - 300px);
+            height: auto;
+            padding-left: 35px;
+    
+            .button {
+              position: absolute;
+              right: 0;
+              border-radius: 10px;
+    
+            }
+    
+            .textBox {
+              .title {
+                font-size: 2rem;
+              }
+    
+              p {
+                width: 80%;
+                font-size: .9rem;
+              }
+            }
+    
+            .miniImgs {
+              position: absolute;
+              display: flex;
+              bottom: 0;
+              height: 105px;
+    
+              img {
+                width: 105px;
+                height: 105px;
+                border-radius: 10px;
+                object-fit: cover;
+                object-position: center;
+                cursor: pointer;
+                transition: 300ms;
+    
+                &:nth-child(2) {
+                  margin: 0 10px;
+                }
+    
+                &:hover {
+                  opacity: .75;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
+
+
+  // .main-card {
+  //       position: relative;
+  //       width: 100%;
+  //       height: auto;
+  //       margin: 80px 20px;
+  //   }
+
+  //   .main-card .card-content {
+  //       flex-direction: column;
+  //   }
+
+  //   .main-card .content-left {
+  //       width: 100%;
+  //       height: 300px;
+  //   }
+
+  //   .main-card .content-right {
+  //       width: 100%;
+  //       height: auto;
+  //       padding: 175px 0 0;
+  //   }
+
+  //   .main-card .tag {
+  //       left: 0;
+  //       transform: translateX(0);
+  //   }
+
+  //   .main-card .mini-imgs {
+  //       position: absolute;
+  //       display: flex;
+  //       top: 0;
+  //       margin-top: 35px;
+  //       height: 105px;
+  //   }
