--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -20,3 +20,74 @@
     }
   }
 }
+
+// @keyframes comet {
+//   0% {
+//     top: 0;
+//     left: 0;
+//     @include tail;
+//     @include ease(In);
+//   }
+
+//   // top left
+//   15% {
+//     top: 0;
+//     left: 50%;
+//     @include tail-1;
+//     @include ease(Out);
+//   }
+
+//   30% {
+//     top: 0;
+//     left: 100%;
+//     @include tail;
+//     @include ease(In);
+//   }
+
+//   // top right
+//   40% {
+//     top: 50%;
+//     left: 100%;
+//     @include tail-2;
+//     @include ease(Out);
+//   }
+
+//   50% {
+//     top: 100%;
+//     left: 100%;
+//     @include tail;
+//     @include ease(In);
+//   }
+
+//   // bottom right
+//   65% {
+//     top: 100%;
+//     left: 50%;
+//     @include tail-3;
+//     @include ease(Out);
+//   }
+
+//   80% {
+//     top: 100%;
+//     left: 0;
+//     @include tail;
+//     @include ease(In);
+//   }
+
+//   // bottom left
+//   90% {
+//     top: 50%;
+//     left: 0;
+//     @include tail-4;
+//     @include ease(Out);
+//   }
+
+//   100% {
+//     top: 0;
+//     left: 0;
+//     @include tail;
+//     @include ease(In);
+//   }
+
+//   // top left
+// }
