--- a/src/components/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs.module.scss
@@ -9,20 +9,20 @@
   &::before{
     content: '';
     position: absolute;
-    top: -70px;
-    left: 0px;
+    top: 23px;
+    left: 30px;
     width: 130px;
-    height: 130px;
-    border: 3px solid #82a75e50;
+    height: 5px;
+    background-color: #82a75e50;
     transform: rotate(5deg);
   }
-  &:after{
-    content: '';
-      position: absolute;
-      right: -30px;
-      bottom: -60px;
-      width: 90px;
-      height: 90px;
-      background-color: #f1b7b766;
-  }
+  // &:after{
+  //   content: '';
+  //     position: absolute;
+  //     right: -30px;
+  //     bottom: -60px;
+  //     width: 90px;
+  //     height: 90px;
+  //     background-color: #f1b7b766;
+  // }
 }
