--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px auto 0;
+  margin: 0 auto 0;
   padding: 20px 20px 30px 20px;
   max-width: 350px;
   background-color: #ffffff30;
