--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,5 +1,5 @@
 .contact{
-  padding: 130px 0;
+  padding: 70px 0;
   width: 100%;
   height: 100%;
   .container{
@@ -8,7 +8,7 @@
     .content{
       display: flex;
       align-items: center;
-      margin-top: 120px;
+      // margin-top: 120px;
       .leftCont{
         padding: 0 10% 0 2%;
         width: 60%;
