--- a/src/components/FlowText/FlowText.module.scss
+++ b/src/components/FlowText/FlowText.module.scss
@@ -1,10 +1,11 @@
 .animatedTitle {
   position: relative;
+  z-index: 1;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: #82a75e;
+  background-color: #fbed7e;
   .track{
     white-space: nowrap;
     will-change: transform;
@@ -14,11 +15,11 @@
       font-family: 'Noto Sans KR', sans-serif;
       line-height: 2.3;
       font-size: 1rem;
-      color: #b7cba3;
+      color: #fff;
       letter-spacing: 2px;
       transition: .4s ease-in-out;
       &:hover {
-        color: #d5e1c9;
+        color: #bc9b8f;
       }
     }
    }
