--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,8 @@ font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Nanum Brush Script', cursive;
 */
 
+$--font-color-default: #4e2d21;
+
 * {
   margin: 0;
   padding: 0;
@@ -22,6 +24,7 @@ font-family: 'Nanum Brush Script', cursive;
 body {
   font-size: 16px;
   font-family: 'Noto Sans KR', sans-serif;
+  color: #4e2d21;
   -ms-overflow-style: none; // scroll 숨기기
 }
 ::-webkit-scrollbar {
