footer 위치 오류 수정

--- a/src/components/TabComponent/TabComponent.module.scss
+++ b/src/components/TabComponent/TabComponent.module.scss
@@ -1,7 +1,7 @@
   .tabMenu {
     display: flex;
-    border-bottom: 4px solid #f5edf2;
-
+    border-bottom: 4px solid #bc9b8f;
+    border-bottom-left-radius: 12px;
     li.tabList {
       margin-right: 5px;
       &.clicked {
