--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -57,7 +57,8 @@
     }
 
     .companyLogo{
-      margin-top: 200px;
+      margin: 100px 0 0 0 ;
+      padding-bottom: 200px;
       h4{
         // font-family: 'El Messiri', sans-serif;
         // font-family: 'Caveat', cursive;
