--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -1,5 +1,7 @@
 
 .wrap{
-  padding: 64px 0 100px;
+  position: relative;
+  padding: 64px 0 0 0;
+  min-height: 100vh;
   background-color: #f3efe9;
 }
