--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,8 @@
 .footer{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   padding: 25px 25px;
   border-top: 1px solid #ddd;
   background-color: #65463b;
