--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -1,24 +1,28 @@
 
 .imgLists {
   position: absolute;
-  display: flex;
   bottom: 0;
-  height: 105px;
-
-  li{
+  padding: 0 30px 0 0;
+  width: 100%;
+  overflow: hidden;
+  .thumb{
+    display: block;
+      width: 180px;
+      height: 120px;
+      overflow: hidden;
+      border-radius: 8px;
     img {
-      width: 105px;
-      height: 105px;
-      border-radius: 10px;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
       object-position: center;
       cursor: pointer;
       transition: 300ms;
-
+  
       &:nth-child(2) {
         margin: 0 10px;
       }
-
+  
       &:hover {
         opacity: .75;
       }
