--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -28,14 +28,22 @@
       }
     }
   }
+ 
+ 
 }
 
 @media screen and (max-width: 768px) {
   .imgLists {
     position: absolute;
-    display: flex;
     top: 0;
-    margin-top: 35px;
-    height: 105px;
+    display: flex;
+    padding: 0;
+    width: 100%;
+    height: 120px;
+    .thumb{
+      display: block;
+      width: 100%;
+      height: 95px;
+    }
   }
 }
