--- a/src/components/ListCards/ListCards.module.scss
+++ b/src/components/ListCards/ListCards.module.scss
@@ -61,6 +61,21 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .listCards{
+    flex-wrap: wrap;
+    li{
+      width: 50%;
+      .imgBox{
+        .thumb{
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
 @keyframes spin {
   0% {
     transform: rotate(360deg)
