--- a/src/components/SliderEffect/slider.module.scss
+++ b/src/components/SliderEffect/slider.module.scss
@@ -2,5 +2,12 @@
     display: flex;
     justify-content: center;
     width: 250px;
-    border: 1px solid #efeae1;
+    border: 1px solid #79554850;
+  }
+
+  
+  @media screen and (max-width: 768px) {
+    .imgThumb {
+      width: 100%;
+    }
   }
