--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -25,11 +25,13 @@
           .formEmail{
             padding: 7px 10px;
             border: 1px solid #dfdfdf;
+            background: #ffffff70;
           }
           .formContext{
             padding: 7px 10px;
             margin-top: 10px;
             border: 1px solid #dfdfdf;
+            background: #ffffff70;
           }
           .btnArea{
             width: 100%;
@@ -48,5 +50,23 @@
       }
     }
   }
-  
+}
+
+
+@media screen and (max-width: 768px) {
+  .contact{
+    .container{
+      padding: 0 20px;
+      max-width: 100%;
+      .content{
+        .leftCont{
+          padding: 0;
+          width: 100%;
+          .title{
+            font-size: 6rem;
+          }
+        }
+      }
+    }
+  }
 }
