--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -89,3 +89,36 @@
     }
   }
 }
+
+
+@media screen and (max-width: 768px) {
+  .main{
+    .container{
+      padding: 0 20px;
+      max-width: 100%;
+      .profile{
+        .bigTitle {
+          margin-top: 70px;
+          font-size: 2.8rem;
+        }
+      }
+      .tagTitle{
+        padding-left: 40px;
+        font-size: 3rem;
+       span{
+        &:before{
+          left: -34px;
+        }
+       }
+      }
+  
+      .companyLogo{
+        h4{
+          padding: 50px 0 10px;
+          font-size: 1.5rem;
+          line-height: 1.1;
+        }
+      }
+    }
+  }
+}
