--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -46,3 +46,46 @@ header{
   }
 }
 
+.hamburger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 7px;
+  width: 40px;
+  height: 40px;
+
+  span {
+    display: block;
+    margin: 5px auto;
+    background-color: rgb(100, 78, 78);
+    width: 100%;
+    height: 3px;
+    border-radius: 5px;
+    transition: all .5s ease;
+  }
+
+  /* Hambuger hover animation */
+  &:hover {
+    span:first-child {
+      transform: translateY(-3px);
+    }
+    span:last-child {
+      transform: translateY(3px);
+    }
+  }
+}
+
+/* Hambuger click animation to cross */
+.hamburger.isOpened {
+  span:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+
+  span:nth-child(2) {
+    transform: scaleX(0);
+  }
+
+  span:last-child {
+    transform: translateY(-7px) rotate(-45deg);
+  }
+}
