--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -5,3 +5,9 @@
   min-height: 100vh;
   background-color: #f3efe9;
 }
+
+@media screen and (max-width: 768px) {
+  .wrap {
+    padding: 50px 0 0 0;
+  }
+}
