--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -50,6 +50,8 @@ header{
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 11;
+  display: block;
   padding: 7px;
   width: 40px;
   height: 40px;
@@ -63,20 +65,10 @@ header{
     border-radius: 5px;
     transition: all .5s ease;
   }
-
-  /* Hambuger hover animation */
-  &:hover {
-    span:first-child {
-      transform: translateY(-3px);
-    }
-    span:last-child {
-      transform: translateY(3px);
-    }
-  }
 }
 
 /* Hambuger click animation to cross */
-.hamburger.isOpened {
+.hamburger.isOpen {
   span:first-child {
     transform: translateY(10px) rotate(45deg);
   }
@@ -87,5 +79,31 @@ header{
 
   span:last-child {
     transform: translateY(-7px) rotate(-45deg);
+  }
+}
+
+.fullMenus{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(184, 165, 134);
+  ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10% 0;
+    height: 100%;
+    li{
+      a{
+        display: block;
+        font-size: 4rem;
+      }
+    }
   }
 }
