--- a/src/components/ListCards/ListCards.module.scss
+++ b/src/components/ListCards/ListCards.module.scss
@@ -69,7 +69,7 @@
       .imgBox{
         .thumb{
           width: 100%;
-          height: 100%;
+          height: 180px;
         }
       }
     }
