--- a/src/index.scss
+++ b/src/index.scss
@@ -120,4 +120,27 @@ p::selection, h1::selection, h2::selection, h3::selection, h4::selection {
   .m-br{
     display: block;
   }
+    .swiper {
+      .swiper-button-next,
+      .swiper-button-prev {
+        top: 43%;
+        margin: 0;
+        width: 35px;
+        height: 40px;
+        font-size: 25px;
+      }
+  
+      .swiper-button-prev {
+        &:after {
+        font-size: 1.3rem;
+        }
+      }
+  
+      .swiper-button-next {
+        &::after {
+          font-size: 1.3rem;
+        }
+      }
+
+    }
 }
