gsap 사용으로 컴포넌트 만들기

--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -6,6 +6,24 @@
   background-color: #f3efe9;
 }
 
+.cursor {
+  position: fixed;
+  background: #2128bd;
+  width: 20px;
+  height: 20px;
+  margin: -10px 0 0 -10px;
+  border-radius: 50%;
+  will-change: transform;
+  user-select: none;
+  pointer-events: none;
+  z-index: 10000;
+}
+
+// ::selection {
+//   color: #fff;
+//   background: #2128bd;
+// }
+
 @media screen and (max-width: 768px) {
   .wrap {
     padding: 50px 0 0 0;
