--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -1,70 +1,13 @@
 .portfolio{
   padding: 70px 0;
+  .content{
+    width: 100%;
+    height: 100vh;
+  }
   .container{
     margin: 0 auto;
     max-width: 1280px;
-    .blogWrap{
-      position: relative;
-      display: flex;
-      margin: 30px auto 0;
-      padding: 30px;
-      min-height: 470px;
-      border-radius: 10px;
-      background-color: #fff;
-      .mainImg {
-        position: relative;
-        width: 300px;
-        height: 405px;
-        border-radius: 10px;
-        overflow: hidden;
-        background-color: #f6f6f6;
-    
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: center;
-        }
-      }
-      
-      .blogContent {
-        position: relative;
-        width: calc(100% - 300px);
-        height: auto;
-        padding-left: 35px;
-
-        .btnWrap {
-          position: absolute;
-          right: 0;
-          display: flex;
-          border-radius: 10px;
-          a{
-            display: block;
-            margin-left: 6px;
-            padding: 10px 30px;
-            text-align: center;
-            font-family: 'Noto Sans KR', sans-serif;
-            font-size: .8rem;
-            color: #fff;
-            background-color: #c7a6a6;
-            transition: .5s ease-in-out;
-          }
-        }
-
-        .textBox {
-          margin-top: 60px;
-          .title {
-            font-size: 2rem;
-            font-weight: bold;
-          }
-          p {
-            margin-top: 15px;
-            width: 80%;
-            font-size: .9rem;
-          }
-        }
-      }
-    }
+   
   }
 }
 
@@ -101,33 +44,7 @@
     .container{
       padding: 0 20px;
       width: 100%;
-      .blogWrap {
-        flex-direction: column;
-        padding: 30px;
-        min-height: auto;
-        .mainImg {
-          width: 100%;
-          height: 100%;
-        }
-        .blogContent {
-          width: 100%;
-          height: auto;
-          padding: 145px 0 0;
-          .btnWrap{
-            position: relative;
-          }
-          .textBox{
-            margin-top: 20px;
-            .title{
-              font-size: 1.5rem;
-            }
-            p{
-              width: 100%;
-              font-size: 1rem;
-            }
-          }
-        }
-      }
+   
     }
   }
 }
