--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -62,6 +62,7 @@
         }
       }
       .ux{
+        position: relative;
         display: flex;
         a, button{
           display: flex;
@@ -84,12 +85,28 @@
                 color: #f1b7b7;
               }
             }
-            
+          }
+         
+        }
+        .likeEffect{
+          position: absolute;
+          top: -20px;
+          right: 17px;
+          font-size: 1.5rem;
+          opacity: 0;
+          color: #f1b7b7;
+          animation: floatingIcon 3s ease-in-out infinite;
+          span{
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            color: #fff;
+            font-size: .5rem;
+            transform: translate(-50%, -50%);
           }
         }
       }
-   
-     
     }
     .text{
       position: relative;
@@ -105,6 +122,33 @@
         background: #d6d6d6;
       }
     }
+  }
+}
+@keyframes floatingIcon {
+  0% {
+    top: 0;
+    color: #f1b7b7;
+    opacity: 0;
+    transform: scale(0) rotate(0);
+  }
+  25%{
+    color: #ef7a7a;
+    transform: rotate(10deg);
+  }
+  50%{
+    color: #eecb3d;
+    opacity: 1;
+    transform: scale(1.3) rotate(-10deg);
+  }
+  75%{
+    color: #99ef48;
+    transform: rotate(10deg);
+  }
+  100% {
+    color: #cd5ada;
+    top: -100px;
+    opacity: 0;
+    transform: scale(0.5) rotate(-10deg);
   }
 }
 
