--- a/src/components/FlowText/FlowText.module.scss
+++ b/src/components/FlowText/FlowText.module.scss
@@ -55,15 +55,14 @@
 
 .marquee {
   position: absolute;
-  top: 340px;
+  top: 820px;
   left: -120px;
   width: 120%;
   height: calc(170px + 4rem);
   color: #be8f8f;
   font-size: var(--step-0);
   overflow: hidden;
-  transform: rotate(-20deg);
-  border-bottom: 1px solid #efefef;
+  // transform: rotate(-20deg);
    .track {
        position: absolute;
        padding: 2rem 0;
