--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amatic+SC:wght@700&family=Caveat:wght@400;600&family=El+Messiri:wght@700&family=Nanum+Brush+Script&family=Noto+Sans+KR:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amatic+SC:wght@700&family=Caveat:wght@400;600&family=El+Messiri:wght@700&family=Noto+Sans+KR:wght@400;700&display=swap');
 /*
 #두꺼운 강약체
 font-family: 'Abril Fatface', cursive;
@@ -8,10 +8,10 @@ font-family: 'Amatic SC', cursive;
 font-family: 'Caveat', cursive;
 # 굴곡 곡선체(두꺼움)
 font-family: 'El Messiri', sans-serif;
+
 # 돋음체(가독성 굳)
 font-family: 'Noto Sans KR', sans-serif;
 
-font-family: 'Nanum Brush Script', cursive;
 */
 
 $--font-color-default: #4e2d21;
