--- a/src/components/LightTextEffect/LightTextEffect.module.scss
+++ b/src/components/LightTextEffect/LightTextEffect.module.scss
@@ -37,7 +37,7 @@
     mix-blend-mode: screen;
     h2{
       font-family: 'Abril Fatface', cursive;
-      font-size: 5rem;
+      font-size: 10rem;
       color: #2128bd;
       &::selection {
         color: #fff;
@@ -49,7 +49,8 @@
       p.text{
         opacity: 0;
         text-align: center;
-        font-size: 1rem;
+        font-size: 1.5rem;
+        font-family: 'Noto Sans KR', sans-serif;
         transform: translate3d(-100px, 0, 0);
       }
     }
