--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -15,7 +15,8 @@
         text-align: center;
         font-size: 4rem;
         letter-spacing: 5px;
-        font-family: 'Caveat', cursive;
+        // font-family: 'Caveat', cursive;
+        font-family: 'Abril Fatface', cursive;
       }
     }
 
@@ -48,7 +49,8 @@
         font-weight: bold;
         font-size: 1.5rem;
         position: relative;
-        font-family: 'Nanum Brush Script', cursive;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-style: normal;
         &:before{
           content: '';
           position: absolute;
