--- a/src/components/LightTextEffect/LightTextEffect.module.scss
+++ b/src/components/LightTextEffect/LightTextEffect.module.scss
@@ -1,7 +1,8 @@
 .welcomeText{
   .effects {
+    overflow: hidden;
     position: relative;
-    height: 60vh;
+    height: 100vh;
     width: 100vw;
     background: #2128bd;
     overflow: hidden;
@@ -38,15 +39,16 @@
     h2{
       font-family: 'Abril Fatface', cursive;
       font-size: 10rem;
-      color: #2128bd;
+      color: #9f63ff;
       &::selection {
         color: #fff;
-        background: #2128bd;
+        background: #fdce34;
       }
     }
     .descBox{
       margin-top: 30px;
       p.text{
+        color: #9f63ff;
         opacity: 0;
         text-align: center;
         font-size: 1.5rem;
