--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -1,193 +1,209 @@
 
 .main{
   .content{
+    position: relative;
     width: 100%;
     height: 100vh;
   }
   .container{
     margin: 0 auto;
     max-width: 1280px;
-    .profile{
+    .breadCrumbsBox{
+      margin-top: 200px;
+    }
+    .profileBox{
+      margin-top: 150px;
       position: relative;
       z-index: 1;
-      .bigTitle {
-        margin-top: 100px;
+      h3 {
+        margin-bottom: 30px;
         text-align: center;
         font-size: 4rem;
         letter-spacing: 5px;
-        // font-family: 'Caveat', cursive;
         font-family: 'Abril Fatface', cursive;
       }
     }
 
-    .tagTitle{
-      position: relative;
-      margin: 200px auto 0;
-      padding-left: 68px;
-      width: auto;
-      font-size: 6rem;
-      // font-family: 'El Messiri', sans-serif;
-      font-family: 'Abril Fatface', cursive;
-      span{
-        position: relative;
-        
-        &::before{
-          content: '#';
-          position: absolute;
-          top: 0;
-          left: -68px;
-        }
-      }
-    }
-    .text{
-      margin-top: 35px;
-      font-size: 1rem;
-      line-height: 1.7;
-      em{
-        display: inline-block;
-        margin-right: 8px;
-        font-weight: bold;
-        font-size: 1.5rem;
-        position: relative;
+    .tagTextBox {
+      margin-top: 160px;
+      .text{
+        font-size: 1rem;
+        line-height: 1.7;
         font-family: 'Noto Sans KR', sans-serif;
-        font-style: normal;
-        &:before{
-          content: '';
-          position: absolute;
-          top: 17px;
-          left: 12px;
-          width: 92%;
-          height: 14px;
-          background-color: #82a75e50;
+        em {
+          display: inline-block;
+          margin-right: 8px;
+          font-weight: bold;
+          font-size: 1.6rem;
+          position: relative;
+          font-style: normal;
+          &:before {
+            content: '';
+            position: absolute;
+            top: 17px;
+            left: 12px;
+            width: 92%;
+            height: 14px;
+            background-color: #82a75e50;
+          }
         }
       }
     }
 
-    .companyLogo{
-      margin: 100px 0 0 0 ;
-      padding-bottom: 200px;
-      h4{
+    .tabs {
+      margin: 300px auto 0;
+    }
+
+    .companyLogo {
+      margin: 300px 0 300px 0;
+
+      h3 {
         padding: 50px 0;
         font-family: 'Abril Fatface', cursive;
         font-size: 4rem;
         line-height: 1.2;
       }
-      ul{
+
+      ul {
         overflow-x: scroll;
         width: 100%;
         display: flex;
         -ms-overflow-style: initial; // scroll 숨기기
-        &::-webkit-scrollbar {
-          display: block;
-        }
-        &::-webkit-scrollbar-thumb{
-            background-color: #efd7d7;
-          display: block;
-          border-radius: 5px;
-        }
-        &::-webkit-scrollbar-track {
-          background-color: rgb(190, 143, 143);
+      }
+    }
+    
+    .imageEffectBox{
+      margin-top: 300px;
+      h3 {
+        position: relative;
+        margin-bottom: 220px;
+        padding-left: 68px;
+        width: auto;
+        font-size: 6rem;
+        // font-family: 'El Messiri', sans-serif;
+        font-family: 'Abril Fatface', cursive;
+        &::before {
+          content: '#';
+          position: absolute;
+          top: 0;
+          left: 0;
         }
       }
     }
-    .tabs{
-      margin: 200px auto 0;
-    }
+ 
+
+
+  
+  
     
 
   }
-}
+  .accordion {
+    margin-top: 100px;
+    $itemsNo: 5;
 
-.accordion {
-  margin-top: 100px;
-  $itemsNo: 5;
-  ul {
-    list-style: none;
-    -webkit-perspective: 900;
-    perspective: 900;
+    ul {
+      list-style: none;
+      -webkit-perspective: 900;
+      perspective: 900;
 
-    li {
-      position: relative;
-      border-bottom: 1px solid red;
-      background-color: #795548;
-      transition: all .5s ease;
-      animation: flipdown 0.5s ease both;
-      &:hover{
-        background-color: #47352f;
-      :before{
-        content: '';
-        width: 100%;
-        height: 100%;
-        color: #fff;
-        // background-color: #be4f4f;
-      }
-      .floatImg{
-        top: -60px;
-        right: 10%;
-        opacity: 1;
-      }
-        .thumb{
-          img{
-            opacity: .7;
-            transform: scale(1.1);
+      li {
+        position: relative;
+        border-bottom: 1px solid red;
+        background-color: #795548;
+        transition: all .5s ease;
+        animation: flipdown 0.5s ease both;
+
+        &:hover {
+          background-color: #47352f;
+
+          &:before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            color: #fff;
+            // background-color: #be4f4f;
+          }
+
+          .floatImg {
+            top: -60px;
+            right: 10%;
+            opacity: 1;
+          }
+
+          .thumb {
+            img {
+              opacity: .7;
+              transform: scale(1.1);
+            }
           }
         }
-      }
-      $delay: 0.4;
-      @for $i from 1 through $itemsNo {
-        &:nth-of-type(#{$i}) {
+
+        $delay: 0.4;
+
+        @for $i from 1 through $itemsNo {
+          &:nth-of-type(#{$i}) {
             animation-delay: #{$delay}s;
-            $delay: $delay + 0.3;
+            $delay: $delay +0.3;
+          }
         }
-      }
-      .floatImg{
-        position: absolute;
-        top: 0;
-        right: 10%;
-        z-index: 1;
-        width: 220px;
-        height: 220px;
-        overflow: hidden;
-        opacity: 0;
-        box-shadow: 0 40px 40px -20px #00000080;
-        transition: .5s ease-in-out;
-        img{
+
+        .floatImg {
+          position: absolute;
+          top: 0;
+          right: 10%;
+          z-index: 2;
+          width: 220px;
+          height: 220px;
+          overflow: hidden;
+          opacity: 0;
+          box-shadow: 0 40px 40px -20px #00000080;
+          transition: .5s ease-in-out;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .textBox {
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 1;
+          padding: 0;
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          // p{
+          //   position: absolute;
+          //   top: 50%;
+          //   left: 50%;
+          //   z-index: 1;
+          //   font-size: 3rem;
+          //   color: #fff;
+          //   text-align: center;
+          //   transform: translate(-50%, -50%);
+          // }
         }
-      }
-      .textBox{
-        position: absolute;
-        top: 0;
-        left: 0;
-        padding: 15px 0;
-        width: 100%;
-        height: 100%;
-        p{
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          z-index: 1;
-          font-size: 3rem;
-          color: #fff;
-          text-align: center;
-          transform: translate(-50%, -50%);
-        }
-      }
-      .thumb{
-        display: block;
-        max-height: 180px;
-        overflow: hidden;
-        img{
-          width: 100%;
-          opacity: .5;
-          transition: .5s ease-in-out;
+
+        .thumb {
+          display: block;
+          max-height: 180px;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            opacity: .5;
+            transition: .5s ease-in-out;
+          }
         }
       }
     }
   }
 }
+
+
 
 @media screen and (max-width: 768px) {
   .main{
@@ -209,7 +225,6 @@
         }
        }
       }
-  
       .companyLogo{
         h4{
           padding: 50px 0 10px;
