--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -1,5 +1,5 @@
 .portfolio{
-  padding: 70px 0;
+  padding: 0;
   .content{
     width: 100%;
     height: 100vh;
@@ -7,17 +7,14 @@
   .container{
     margin: 0 auto;
     max-width: 1280px;
-   
   }
 }
-
 
 .imgLists {
   position: absolute;
   display: flex;
   bottom: 0;
   height: 105px;
-
   li{
     img {
       width: 105px;
@@ -27,11 +24,9 @@
       object-position: center;
       cursor: pointer;
       transition: 300ms;
-
       &:nth-child(2) {
         margin: 0 10px;
       }
-
       &:hover {
         opacity: .75;
       }
@@ -44,7 +39,6 @@
     .container{
       padding: 0 20px;
       width: 100%;
-   
     }
   }
 }
