gsap 추가 및 수정

--- a/src/index.scss
+++ b/src/index.scss
@@ -73,7 +73,7 @@ p::selection, h1::selection, h2::selection, h3::selection, h4::selection {
 
 .swiper{
   .swiper-wrapper{
-    padding: 25px 0;
+    // padding: 25px 0;
   }
   .swiper-button-next, .swiper-button-prev{
     width: 35px;
