--- a/src/components/AnimationEffect/ImageReveal.scss
+++ b/src/components/AnimationEffect/ImageReveal.scss
@@ -54,6 +54,7 @@ $image6Height: 100%;
         visibility: hidden;
       }
       .img {
+        opacity: 0;
         position: relative;
         z-index: 10;
         width: 100%;
