--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -9,6 +9,7 @@
 .cursor {
   position: fixed;
   z-index: 10000;
+  display: block;
   width: 20px;
   height: 20px;
   margin: -10px 0 0 -10px;
@@ -28,5 +29,8 @@
 @media screen and (max-width: 768px) {
   .wrap {
     padding: 50px 0 0 0;
+  }
+  .cursor {
+   display: none;
   }
 }
