--- a/src/components/LightTextEffect/LightTextEffect.module.scss
+++ b/src/components/LightTextEffect/LightTextEffect.module.scss
@@ -40,6 +40,7 @@
       font-family: 'Abril Fatface', cursive;
       font-size: 10rem;
       color: #9f63ff;
+      text-align: center;
       &::selection {
         color: #fff;
         background: #fdce34;
@@ -53,10 +54,46 @@
         text-align: center;
         font-size: 1.5rem;
         font-family: 'Noto Sans KR', sans-serif;
+        word-break: keep-all;
         transform: translate3d(-100px, 0, 0);
       }
     }
   }
-  
 }
 
+@media screen and (max-width: 768px) {
+  .lightTextEffect{
+    .effects {
+      .effect{
+        will-change: transform;
+        position: absolute;
+        border-radius: 50%;
+        $effects: (#005ffe: 650px, #ffe5e3: 440px, #ffcc57: 270px);
+        @each $color, $size in $effects {
+          &.effect#{index($effects, ($color $size))} {
+            background: $color;
+            width: $size;
+            height: $size;
+            margin: (-$size/2) 0 0 (-$size/2);
+          }
+        }
+      }
+    }
+    .topText{
+      h2{
+        margin: 0 auto;
+        width: 90%;
+        font-size: 4.7rem;
+        line-height: 1;
+      }
+      .descBox{
+        width: 90%;
+        margin: 0 auto;
+        p.text{
+          font-size: 1.2rem;
+          word-break: keep-all;
+        }
+      }
+    }
+  }
+}
