--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -73,7 +73,7 @@
     }
     
     .imageEffectBox{
-      margin-top: 300px;
+      margin: 300px 0;
       h3 {
         position: relative;
         margin-bottom: 220px;
@@ -91,13 +91,6 @@
         }
       }
     }
- 
-
-
-  
-  
-    
-
   }
   .accordion {
     margin-top: 100px;
@@ -176,6 +169,7 @@
           padding: 0;
           width: 100%;
           height: 100%;
+          overflow: hidden;
           // p{
           //   position: absolute;
           //   top: 50%;
@@ -190,11 +184,16 @@
 
         .thumb {
           display: block;
-          max-height: 180px;
+          width: 100%;
+          height: 100%;
+          opacity: .5;
           overflow: hidden;
-
+          transition: .5s ease-in-out;
           img {
+            display: block;
             width: 100%;
+            height: 100%;
+            object-fit: cover;
             opacity: .5;
             transition: .5s ease-in-out;
           }
@@ -205,32 +204,62 @@
 }
 
 
-
 @media screen and (max-width: 768px) {
   .main{
     .container{
       padding: 0 20px;
       max-width: 100%;
-      .profile{
-        .bigTitle {
+      .breadCrumbsBox{
+        margin-top: 100px;
+      }
+      .profileBox{
+        h3 {
           margin-top: 70px;
           font-size: 2.8rem;
         }
       }
-      .tagTitle{
+      .tagTextBox {
+        .text{
+          em {
+            font-size: 1.3rem;
+          }
+        }
+      }
+      .imageEffectBox{
+        margin: 200px 0;
+        h3{
+        margin-bottom: 100px;
         padding-left: 40px;
         font-size: 3rem;
-       span{
-        &:before{
-          left: -34px;
+          &:before{
+            left: 0;
+          }
         }
-       }
       }
       .companyLogo{
-        h4{
-          padding: 50px 0 10px;
-          font-size: 1.5rem;
-          line-height: 1.1;
+        margin: 220px 0 220px 0;
+        h3{
+          margin: 0 0 50px 0;
+          padding: 0;
+          width: 80%;
+          font-size: 2rem;
+          line-height: 1.2;
+          font-family: 'Abril Fatface', cursive;
+        }
+      }
+    }
+    
+    .accordion {
+      ul {
+        li {
+          .floatImg{
+            transform: scale(0.8);
+          }
+          &:hover {
+            .floatImg {
+              top: -135px;
+            }
+          }
         }
       }
     }
